--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,26 +6,17 @@ website:
   title: "Data Visualizations"
   navbar:
     left:
-      - text: "Home"
-        href: index.qmd
-      - text: "About"
-        href: about.qmd
-      - text: "Visualizations"
-        menu:
-          - text: "Redesign 1"
-            href: redesign1.qmd
-          - text: "Redesign 2"
-            href: redesign2.qmd
-          - text: "Redesign 3"
-            href: redesign3.qmd
-      - text: "Oil Production"
-        menu:
-          - text: "Bar Plot"
-            href: oil_bar.qmd
-          #- text: "Geospatial"
-          # href: oil_map.qmd
-          
+      - href: index.qmd
+        text: Home
+      - about.qmd
+      - graphs.qmd
+      - explanation1.qmd
+      - oilproductiongraphs.qmd
+      - explanation2.qmd
 format:
   html:
-   css: styles.css
+    theme: lumen
+    css: styles.css
+    toc: true
 
+editor: visual
