--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
       - explanation1.qmd
       - oilproductiongraphs.qmd
       - explanation2.qmd
-      - code_midproject.qmd
+      - midproject_codes.qmd
       
 format:
   html:
