--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,7 @@ website:
       - oilproductiongraphs.qmd
       - explanation2.qmd
       - midproject_codes.qmd
+      - video.qmd
       
 format:
   html:
